2004-09-23 Niklas Knutsson  <nq@altern.org>

	* Increase space after imaginary i by 1
	* Fix never ending loop in getBestPrefix()
	* Fix (2x)/(5(yz)) --> (2x)/(5yz)
	* Take into account place_units_separately in improve_division_multipliers()
	* Increase space at end of parenthesis by 1
	* Change components() to dimension()
	* Set correl() as a different name for pearson() instead of a separate function
	* Check that the dimension of vectors is equal in pearson() and spearman()
	* Test if polynomial division reduces the size of the expression
	* Stop after editing data set from edit function function
	* Tweak data set info printing removing tabs
	* Save Image -> Save Image...

2004-09-22 Niklas Knutsson  <nq@altern.org>

	* Fix data object edit option menu
	* Do not show error when global data file cannot be loaded for local data set
	* Update data property list also when the data set is new
	* Fix setting data set function name
	* Set default argument names for data set when entries are empty
	* Do not delete original property and add new -- set original with new to not invalidate references in objects
	* Position progress dialog center parent, and set unknowns and convert to unit expression under mouse
	* Once again, fix prefix selection when prefix is first before/after zero

2004-09-21 Niklas Knutsson  <nq@altern.org>

	* Rational factorization of higher degree polynomials

2004-09-20 Niklas Knutsson  <nq@altern.org>

	* Some result display tweaks
	* Update function titles and argument names
	* Update Swedish translation
	* Update documentation
	* Print quotation marks for symbolic structures when not allow unusable
	* Display e*e^x with multiplication sign

2004-09-19 Niklas Knutsson  <nq@altern.org>

	* Full factorization of quadratic polynomials
	* Transform sqrt(8) to 2*sqrt(2) (and similar) in exact mode
	* Fix xy-xy=xy !!!
	* Fix repeated apply in unknowns dialog

2004-09-18 Niklas Knutsson  <nq@altern.org>

	* Updated result sorting